fixes hard to read text

--- a/src/css/repl.css
+++ b/src/css/repl.css
@@ -1,6 +1,6 @@
 #output > div {
     font-family: 'monospace';
-    background-color: #1E1E3E;
+    background-color: #e5e5e5;
     border: 1px solid lightgray;
     border-top: 0;
     font-size: 0.875rem;
